Fixed css layout issue

--- a/src/Fakebook/static/css/home.css
+++ b/src/Fakebook/static/css/home.css
@@ -28,7 +28,7 @@
     /* Example width - adjust as necessary */
     margin: auto;
     /* Centers the middle section */
-    margin-left: 15%;
+    margin-left: 20%;
 }
 
 /* Style for the feed head, including the username and ellipsis */
